add time and date

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="box">
             <figure>
                 <img src="" alt="" class="image shadow">
-                <figcaption>Capture Date:</figcaption>
+                <figcaption></figcaption>
             </figure>
         </div>
 
