--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div class="box">
-            <video src="" autoplay class="video shadow" poster="source/img/favicon.png"></video>
+            <video height="300" width="300" src="" autoplay class="video shadow" poster="source/img/favicon.png"></video>
         </div>
 
         <div class="buttons">
