added full screen view for webcam

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             </figure>
         </div>
 
-
+        
+    </div>
+    <div class="modal modal-hidden">
+        <button class="close-modal-btn" title="close">X</button>
+        <video src="" autoplay></video>
     </div>
 </body>
 </html>
